--- a/TurnosDominio/TurnosDominio.csproj
+++ b/TurnosDominio/TurnosDominio.csproj
@@ -45,9 +45,11 @@
     <Compile Include="Especialidad.cs" />
     <Compile Include="ObraSocial.cs" />
     <Compile Include="Paciente.cs" />
+    <Compile Include="PerfilUsuario.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Profesional.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoDocumento.cs" />
     <Compile Include="Turno.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
