se agrego agregaron clases negocio, y ventanas

--- a/TurnosNegocio/TurnosNegocio.csproj
+++ b/TurnosNegocio/TurnosNegocio.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="EspecialidadesNegocio.cs" />
+    <Compile Include="personanegocio.cs" />
+    <Compile Include="profesional.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
