--- a/WebApplication1/TurnosApp.csproj
+++ b/WebApplication1/TurnosApp.csproj
@@ -105,6 +105,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="contactos.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -161,6 +162,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="contactos.aspx.cs">
+      <DependentUpon>contactos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="contactos.aspx.designer.cs">
+      <DependentUpon>contactos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="default_inicio.aspx.cs">
       <DependentUpon>default_inicio.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
