--- a/TurnosAppWeb/TurnosAppWeb.csproj
+++ b/TurnosAppWeb/TurnosAppWeb.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Style.css" />
     <Content Include="default.aspx" />
     <Content Include="Global.asax" />
     <Content Include="PreviousContactos.aspx" />
