--- a/TurnosNegocio/TurnosNegocio.csproj
+++ b/TurnosNegocio/TurnosNegocio.csproj
@@ -42,11 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccesoDatos.cs" />
-    <Compile Include="EspecialidadesNegocio.cs" />
-    <Compile Include="personanegocio.cs" />
+    <Compile Include="EspecialidadNegocio.cs" />
+    <Compile Include="EstadoTurnosNegocio.cs" />
+    <Compile Include="ObraSocialNegocio.cs" />
+    <Compile Include="PerfilUsuarioNegocio.cs" />
+    <Compile Include="PersonaNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoDocumentoNegocio.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="script_db\Vistas.sql" />
     <Content Include="script_db\TurnosApp_DB.sql" />
     <Content Include="script_db\TurnosApp_Datos.sql" />
   </ItemGroup>
