--- a/TurnosNegocio/TurnosNegocio.csproj
+++ b/TurnosNegocio/TurnosNegocio.csproj
@@ -46,7 +46,7 @@
     <Compile Include="EstadoTurnoNegocio.cs" />
     <Compile Include="ObraSocialNegocio.cs" />
     <Compile Include="PerfilUsuarioNegocio.cs" />
-    <Compile Include="PersonaNegocio.cs" />
+    <Compile Include="UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoDocumentoNegocio.cs" />
   </ItemGroup>
