--- a/TurnosDominio/TurnosDominio.csproj
+++ b/TurnosDominio/TurnosDominio.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Especialidad.cs" />
     <Compile Include="ObraSocial.cs" />
     <Compile Include="PerfilUsuario.cs" />
-    <Compile Include="Persona.cs" />
+    <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoDocumento.cs" />
     <Compile Include="Turno.cs" />
