--- a/TurnosAppWeb/TurnosAppWeb.csproj
+++ b/TurnosAppWeb/TurnosAppWeb.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="alta_especialidad.aspx" />
+    <Content Include="modificar_especialidad.aspx" />
     <Content Include="UsuarioForm.aspx" />
     <Content Include="ObraSocialForm.aspx" />
     <Content Include="Content\Style.css" />
@@ -86,6 +87,13 @@
     </Compile>
     <Compile Include="alta_especialidad.aspx.designer.cs">
       <DependentUpon>alta_especialidad.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="modificar_especialidad.aspx.cs">
+      <DependentUpon>modificar_especialidad.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="modificar_especialidad.aspx.designer.cs">
+      <DependentUpon>modificar_especialidad.aspx</DependentUpon>
     </Compile>
     <Compile Include="UsuarioForm.aspx.cs">
       <DependentUpon>UsuarioForm.aspx</DependentUpon>
