--- a/TurnosDominio/TurnosDominio.csproj
+++ b/TurnosDominio/TurnosDominio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Especialidad.cs" />
     <Compile Include="ObraSocial.cs" />
     <Compile Include="PerfilUsuario.cs" />
+    <Compile Include="Profesional.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoDocumento.cs" />
