--- a/TurnosDominio/TurnosDominio.csproj
+++ b/TurnosDominio/TurnosDominio.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="EstadoTurno.cs" />
     <Compile Include="Especialidad.cs" />
-    <Compile Include="ingresos.cs" />
+    <Compile Include="Ingreso.cs" />
     <Compile Include="ObraSocial.cs" />
     <Compile Include="PerfilUsuario.cs" />
     <Compile Include="Profesional.cs" />
