--- a/TurnosNegocio/TurnosNegocio.csproj
+++ b/TurnosNegocio/TurnosNegocio.csproj
@@ -44,7 +44,7 @@
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="EspecialidadNegocio.cs" />
     <Compile Include="EstadoTurnoNegocio.cs" />
-    <Compile Include="ingresosnegocio.cs" />
+    <Compile Include="IngresoNegocio.cs" />
     <Compile Include="ObraSocialNegocio.cs" />
     <Compile Include="PerfilUsuarioNegocio.cs" />
     <Compile Include="ProfesionalNegocio.cs" />
