--- a/TurnosNegocio/TurnosNegocio.csproj
+++ b/TurnosNegocio/TurnosNegocio.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ObraSocialNegocio.cs" />
     <Compile Include="PerfilUsuarioNegocio.cs" />
     <Compile Include="ProfesionalNegocio.cs" />
+    <Compile Include="TurnoNegocio.cs" />
     <Compile Include="UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoDocumentoNegocio.cs" />
