--- a/TurnosAppWeb/TurnosAppWeb.csproj
+++ b/TurnosAppWeb/TurnosAppWeb.csproj
@@ -67,6 +67,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Tablas\menuadmin.aspx" />
+    <Content Include="Tablas\menugestion.aspx" />
+    <Content Include="Tablas\menupaciente.aspx" />
+    <Content Include="Tablas\menuprofesional.aspx" />
     <Content Include="Tablas\ProfesionalListado.aspx" />
     <Content Include="Tablas\EspecialidadForm.aspx" />
     <Content Include="Tablas\EstadoTurnoForm.aspx" />
@@ -89,6 +93,34 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Tablas\menuadmin.aspx.cs">
+      <DependentUpon>menuadmin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tablas\menuadmin.aspx.designer.cs">
+      <DependentUpon>menuadmin.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Tablas\menugestion.aspx.cs">
+      <DependentUpon>menugestion.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tablas\menugestion.aspx.designer.cs">
+      <DependentUpon>menugestion.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Tablas\menupaciente.aspx.cs">
+      <DependentUpon>menupaciente.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tablas\menupaciente.aspx.designer.cs">
+      <DependentUpon>menupaciente.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Tablas\menuprofesional.aspx.cs">
+      <DependentUpon>menuprofesional.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Tablas\menuprofesional.aspx.designer.cs">
+      <DependentUpon>menuprofesional.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Tablas\ProfesionalListado.aspx.cs">
       <DependentUpon>ProfesionalListado.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
